--- a/www-root/index.html
+++ b/www-root/index.html
@@ -13,8 +13,8 @@
 </head>
     <body>
           <!-- Global Header -->
-    <div class="navbar navbar-fixed-top toolbar blue-header" style="background-image:url(https://msudenver.edu/media/newsiteassets/images/header_asphalt.png);">
-      <div class="header-container">
+    <div class="navbar navbar-fixed-top" >
+      <div class="header-container" style="background-image:url(https://msudenver.edu/media/newsiteassets/images/header_asphalt.png); background-size: 100%;">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
           <span class="sr-only">Toggle quick links navigation</span>
           <span class="fa fa-bars"></span>
