makes search accessible by tabbing.

--- a/www-root/index.html
+++ b/www-root/index.html
@@ -104,7 +104,7 @@
                <li id="nav-athletics" role="button" aria-haspopup="true" aria-label="Athletics Link">
                  <a href="http://roadrunnersathletics.com" class="mobile-alumni athletics-header">Athletics</a>
                </li>
-               <li id="nav-search"><span class="fa fa-search search-desktop"></span></li>
+               <li id="nav-search" aria-haspopup="true" aria-label="Search toolbar"><a href="#"><span class="fa fa-search search-desktop"></span></a></li>
         <!-- Hidden Search Bar-->
               <form action="https://www.msudenver.edu/search">
                 <div id="search-input" class="inner-addon left-addon search-input-desktop" role="search" action="https://www.msudenver.edu/search">
