--- a/www-root/index.html
+++ b/www-root/index.html
@@ -260,7 +260,7 @@ $('#nav-search-close').click(function(){
 });
 </script>
 
-/* allow mobile menu dropdown to scroll */
+<!-- allow mobile menu dropdown to scroll -->
 <script>
 $('#content-nav').css('max-height',$(window).height());
 </script>
