give focus to search field when magnifying glass clicked

--- a/www-root/index.html
+++ b/www-root/index.html
@@ -250,7 +250,7 @@ $('#nav-search').click(function(){
 	$('#nav-admissions, #nav-academics, #nav-campus, #nav-athletics, #nav-hub, #nav-alumni, #nav-faculty, #nav-search').fadeTo('fast', 0);
 	setTimeout(function(){
 		$('#search-input').fadeTo('fast', 1);
-		$('#search-text').focus();
+		$('#q').focus();
 	}, 100);
 });
 
