--- a/www-root/index.html
+++ b/www-root/index.html
@@ -122,7 +122,7 @@
                     </a>
                   </div>
                       <label for="nav-search-close" class="sr-only">leave search area</label>
-                      <button id="nav-search-close" type="button" class="fa fa-close"></button>
+                      <button id="nav-search-close" type="reset" class="fa fa-close"></button>
                 </div> <!-- search-input -->
               </form>
             </ul>
