--- a/www-root/index.html
+++ b/www-root/index.html
@@ -104,12 +104,12 @@
                <li id="nav-athletics" role="button" aria-haspopup="true" aria-label="Athletics Link">
                  <a href="http://roadrunnersathletics.com" class="mobile-alumni athletics-header">Athletics</a>
                </li>
-               <li id="nav-search" aria-haspopup="true" aria-label="Search toolbar" class="hidden-xs hidden-sm"><a href="#"><span class="fa fa-search search-desktop"></span></a></li>
+               <li id="nav-search" class="hidden-xs hidden-sm"><a href="#"><span class="fa fa-search search-desktop"><span class="sr-only">click to enter search input area</span></span></a></li>
         <!-- Hidden Search Bar-->
               <form action="https://www.msudenver.edu/search">
                 <div id="search-input" class="inner-addon left-addon search-input-desktop" role="search" action="https://www.msudenver.edu/search">
                   <span class="fa fa-search fa-search-opened"></span>
-                  <label for="q" class="sr-only">Search MSU Denver site</label>
+                  <label for="q" class="sr-only">Search MSU Denver dot e d u</label>
                   <input  id="q" name="q" type="text" class="home-input" placeholder="SEARCH MSU DENVER" style="margin-left: -3px; outline: none; font-weight: initial;">
               <!-- AUTO SUGGEST -->
               <!-- Code auto suggest server by DEV, PROD, etc. -->
@@ -117,7 +117,7 @@
                           <!-- END AUTO SUGGEST -->
                   <div class="gobutton">
                     <a id="searchGoLink" class="disableGoButton">
-                      <label for="qButton" class="sr-only">execute search</label>
+                      <label for="qButton" class="sr-only">conduct search</label>
                       <button type="submit" class="search-button" id="qButton">SEARCH</button>
                     </a>
                   </div>
