updates header nav with academics links and expands width

--- a/www-root/index.html
+++ b/www-root/index.html
@@ -76,8 +76,10 @@
                <li id="nav-academics" role="button" aria-haspopup="true" aria-label="Academics Menu">
                  <a href="#" class="mobile-header mobile-academics"><span class="fa fa-chevron-down pull-right"></span>Academics</a>
                  <ul class="pushdown-menu pushdown-academics">
+                   <li><a href="/academics/">Academics</a></li>
                    <li><a href="/programs/">Academic Programs</a></li>
-                   <li><a href="/las/">College of Letters, Arts and Sciences</a></li>
+                   <li><a href="/academics/schedulescalendarscatalogs/">Schedules, Calendars &amp; Catalogs</a></li>
+                   <li><a href="/las/">College of Letters, Arts &amp; Sciences</a></li>
                    <li><a href="/cps/">College of Professional Studies</a></li>
                    <li><a href="/business/">College of Business</a></li>
                    <li><a href="/education/">School of Education</a></li>
