change button colors

--- a/development/terminalfour/src/html/admissions.html
+++ b/development/terminalfour/src/html/admissions.html
@@ -375,23 +375,7 @@ $(window).scroll(function(){
 
                         <!-- *********************************  -->
                         <!-- SITEMANAGER HEADER ENDS HERE -->
-                        <!-- *********************************  --><style>
-.content .img-responsive {
-    padding: 0px !important;
-}
-.admissions-deadlines {
-    font-size: 1.65em;
-    margin-bottom: 15px;
-    display: block;
-    padding: .5em 5px;
-    text-align: center;
-    line-height: 1em;
-    color: #fff;
-}
-.actionHeader.events {
-    background-color: #d11242;
-}
-</style>
+                        <!-- *********************************  -->
                     <div class="">
                         <div class="row">
                           <a href="/visit/">
@@ -485,7 +469,7 @@ $(window).scroll(function(){
                             </div>
                             <div class="col-lg-4">
                                 <div class="panel" style="height: 324px">
-                                    <h4 class="actionHeader events clickable admissions-deadlines" data-href="/events/academic">DATES / DEADLINES</h4>
+                                    <h4 class="actionHeader events clickable admissions-deadlines" data-href="/events/academic">Dates / Deadlines</h4>
                                     <div id="homepage_events" class="">
                                         <script type="text/javascript" src="//www.trumba.com/scripts/spuds.js">
                                         </script>
