--- a/development/terminalfour/src/html/admissions.html
+++ b/development/terminalfour/src/html/admissions.html
@@ -390,81 +390,53 @@ $(window).scroll(function(){
                                 <div class="action-btns">
                                     <div class="ThreeCornerBox action-one clickable" data-href="apply">
                                         <span>START YOUR APPLICATION</span>
-                                        <div class=""><i class="glyphicon glyphicon-log-in"></i></div>
                                     </div>
                                 </div>
                                 <div class="ThreeCornerBox action-two clickable" data-href="https://admission.msudenver.edu/Datatel.ERecruiting.Web.External/Pages/welcome.aspx">
                                     <span>CHECK STATUS / FINISH APPLICATION</span>
-                                    <div class=""><i class="glyphicon glyphicon-log-in"></i></div>
                                 </div>
                                 <div class="ThreeCornerBox action-three clickable" data-href="after">
                                     <span>AFTER YOU'VE BEEN ADMITTED</span>
-                                    <div class=""><i class="glyphicon glyphicon-log-in"></i></div>
                                 </div>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-lg-2">
                                 <div class="">
-                                  <div class="tool-one clickable" data-href="https://www.msudenver.edu/programs/">
-                                        <p>
-
-                                            <i class="glyphicon glyphicon-play"></i>
-                                            DEGREE FINDER
-                                        </p>
+                                  <div class="tool clickable" data-href="https://www.msudenver.edu/programs/">
+                                            Degree Finder
                                     </div>
-                                    <div class="tool-two clickable" data-href="https://www.msudenver.edu/admissions/cost">
-                                        <p>
-                                            <i class="glyphicon glyphicon-play"></i>
-                                            COST
-                                        </p>
+                                    <div class="tool clickable" data-href="https://www.msudenver.edu/admissions/cost">
+                                            Cost
                                     </div>
-                                    <div class="tool-three clickable" data-href="https://www.msudenver.edu/campuslife">
-                                        <p>
-                                            <i class="glyphicon glyphicon-play"></i>
-                                            CAMPUS LIFE
-                                        </p>
+                                    <div class="tool clickable" data-href="https://www.msudenver.edu/campuslife">
+                                            Campus Life
                                     </div>
-                                    <div class="tool-four clickable" data-href="parents">
-                                        <p>
-                                            <i class="glyphicon glyphicon-play"></i>
-                                            PARENTS
-                                        </p>
+                                    <div class="tool clickable" data-href="parents">
+                                            Parents
                                     </div>
                                 </div>
                             </div>
                             <div class="col-lg-3 info-section">
-                                <div class="">
-                                    <div class="info-one clickable" data-href="requestinfo">
-                                        Request Info
-                                    </div>
+                                <div class="info-box clickable" data-href="requestinfo">
+                                    Request Info
                                 </div>
-                                <div class="">
-                                    <div class="info-two clickable" data-href="takeatour">
-                                        Take a Tour
-                                    </div>
+                                <div class="info-box clickable" data-href="takeatour">
+                                    Take a Tour
                                 </div>
-                                <div class="">
-                                    <div class="info-three clickable" data-href="counselor">
-                                        Meet an Admissions Counselor
-                                    </div>
+                                <div class="info-box clickable" data-href="counselor">
+                                    Meet an Admissions Counselor
                                 </div>
                             </div>
                             <div class="col-lg-3">
-                                <div class="">
-                                    <div class="info-four clickable" data-href="findus">
-                                        Find Us
-                                    </div>
+                                <div class="info-box clickable" data-href="findus">
+                                    Find Us
                                 </div>
-                                <div class="">
-                                    <div class="info-five clickable" data-href="/openhouse">
-                                        Attend Open House
-                                    </div>
+                                <div class="info-box clickable" data-href="/openhouse">
+                                    Attend Open House
                                 </div>
-                                <div class="">
-                                    <div class="info-six clickable" data-href="contact">
-                                        Contact Admissions
-                                    </div>
+                                <div class="info-box clickable" data-href="contact">
+                                    Contact Admissions
                                 </div>
                             </div>
                             <div class="col-lg-4">
