additional reformatting admissions page styles

--- a/development/terminalfour/src/html/admissions.html
+++ b/development/terminalfour/src/html/admissions.html
@@ -386,24 +386,21 @@ $(window).scroll(function(){
 
                              </div>
                           </a>
-                            <div class="col-lg-4 ">
-                                <div class="action-btns">
-                                    <div class="ThreeCornerBox action-one clickable" data-href="apply">
+                            <div class="col-lg-4 action-btns-container">
+                                    <div class="rowdyred action-one clickable action-btns" data-href="apply">
                                         <span>START YOUR APPLICATION</span>
                                     </div>
-                                </div>
-                                <div class="ThreeCornerBox action-two clickable" data-href="https://admission.msudenver.edu/Datatel.ERecruiting.Web.External/Pages/welcome.aspx">
+                                <div class="rowdyblue action-two clickable action-btns" data-href="https://admission.msudenver.edu/Datatel.ERecruiting.Web.External/Pages/welcome.aspx">
                                     <span>CHECK STATUS / FINISH APPLICATION</span>
                                 </div>
-                                <div class="ThreeCornerBox action-three clickable" data-href="after">
+                                <div class="give-visit-buttons action-three clickable action-btns" data-href="after">
                                     <span>AFTER YOU'VE BEEN ADMITTED</span>
                                 </div>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-lg-2">
-                                <div class="">
-                                  <div class="tool clickable" data-href="https://www.msudenver.edu/programs/">
+                                  <div class="tool tool-one clickable" data-href="https://www.msudenver.edu/programs/">
                                             Degree Finder
                                     </div>
                                     <div class="tool clickable" data-href="https://www.msudenver.edu/admissions/cost">
@@ -412,33 +409,32 @@ $(window).scroll(function(){
                                     <div class="tool clickable" data-href="https://www.msudenver.edu/campuslife">
                                             Campus Life
                                     </div>
-                                    <div class="tool clickable" data-href="parents">
+                                    <div class="tool clickable tool-last" data-href="parents">
                                             Parents
                                     </div>
-                                </div>
                             </div>
-                            <div class="col-lg-3 info-section">
-                                <div class="info-box clickable" data-href="requestinfo">
-                                    Request Info
-                                </div>
-                                <div class="info-box clickable" data-href="takeatour">
-                                    Take a Tour
-                                </div>
-                                <div class="info-box clickable" data-href="counselor">
-                                    Meet an Admissions Counselor
-                                </div>
-                            </div>
-                            <div class="col-lg-3">
-                                <div class="info-box clickable" data-href="findus">
-                                    Find Us
-                                </div>
-                                <div class="info-box clickable" data-href="/openhouse">
-                                    Attend Open House
-                                </div>
-                                <div class="info-box clickable" data-href="contact">
-                                    Contact Admissions
-                                </div>
-                            </div>
+                              <div class="col-lg-3 info-section">
+                                  <div class="info-box clickable" data-href="requestinfo">
+                                      <span class="infocenter">Request Info</span>
+                                  </div>
+                                  <div class="info-box clickable" data-href="takeatour">
+                                      <span class="infocenter">Take a Tour</span>
+                                  </div>
+                                  <div class="info-box clickable tool-last" data-href="counselor">
+                                      <span class="infocenter">Meet an Admissions Counselor</span>
+                                  </div>
+                              </div>
+                              <div class="col-lg-3 info-section" >
+                                  <div class="info-box clickable" data-href="findus">
+                                      <span class="infocenter">Find Us</span>
+                                  </div>
+                                  <div class="info-box clickable" data-href="/openhouse">
+                                      <span class="infocenter">Attend Open House</span>
+                                  </div>
+                                  <div class="info-box clickable" data-href="contact">
+                                      <span class="infocenter">Contact Admissions</span>
+                                  </div>
+                              </div>
                             <div class="col-lg-4">
                                 <div class="panel" style="height: 324px">
                                     <h4 class="actionHeader events clickable admissions-deadlines" data-href="/events/academic">Dates / Deadlines</h4>
