additional css/html fixes to admissions page

--- a/development/terminalfour/src/html/admissions.html
+++ b/development/terminalfour/src/html/admissions.html
@@ -367,25 +367,19 @@ $(window).scroll(function(){
   </section>
 <!-- ENDS BREADCRUMBS + SITEHEADER -->
     <div class="container-fluid" id="content">
-        <div class="row">
-                <div class="col-xs-12 col-md-10 col-md-push-1">
-                   <div class="content row items-container">
 <!-- BEGINS HERO IMAGE -->
 
 
                         <!-- *********************************  -->
                         <!-- SITEMANAGER HEADER ENDS HERE -->
                         <!-- *********************************  -->
-                    <div class="">
                         <div class="row">
-                          <a href="/visit/">
-                            <div class="col-lg-8">
-                                    <img class="img-responsive" src="/media/content/admissions/images/Preview Day Web 2 (4).png" alt="" style="   " />
+                          <div class="col-lg-8">
+                            <a href="/visit/">
+                              <img class="img-responsive" src="/media/content/admissions/images/Preview Day Web 2 (4).png" alt="" style="   " />
+                            </a>
+                          </div>
 
-
-
-                             </div>
-                          </a>
                             <div class="col-lg-4 action-btns-container">
                                     <div class="rowdyred action-one clickable action-btns" data-href="apply">
                                         <span>START YOUR APPLICATION</span>
@@ -435,8 +429,7 @@ $(window).scroll(function(){
                                       <span class="infocenter">Contact Admissions</span>
                                   </div>
                               </div>
-                            <div class="col-lg-4">
-                                <div class="panel" style="height: 324px">
+                            <div class="col-lg-4 panel">
                                     <h4 class="actionHeader events clickable admissions-deadlines" data-href="/events/academic">Dates / Deadlines</h4>
                                     <div id="homepage_events" class="">
                                         <script type="text/javascript" src="//www.trumba.com/scripts/spuds.js">
@@ -456,18 +449,12 @@ $(window).scroll(function(){
                                         Please enable JavaScript in your browser settings then try again.
                                         </noscript>
                                     </div>
-                                </div>
                             </div>
                         </div>
-                    </div>
                     <!-- / code only section -->                        <!-- *********************************  -->
                         <!-- SITEMANAGER START FOOTER -->
                         <!-- *********************************  -->
 <a class="t4Edit-page" href="https://adt4apps.msudenver.edu/terminalfour/page/directEdit#edit/1/en/2917"><i class="fa fa-edit"> </i> Edit this page</a>
-
-                    </div>
-                </div>
-        </div>
     </div>
 
 
