further adjustments to admissions page

--- a/development/terminalfour/src/html/admissions.html
+++ b/development/terminalfour/src/html/admissions.html
@@ -374,13 +374,13 @@ $(window).scroll(function(){
                         <!-- SITEMANAGER HEADER ENDS HERE -->
                         <!-- *********************************  -->
                         <div class="row">
-                          <div class="col-lg-8">
+                          <div class="col-xs-12 col-sm-8">
                             <a href="/visit/">
-                              <img class="img-responsive" src="/media/content/admissions/images/Preview Day Web 2 (4).png" alt="" style="   " />
+                              <img class="img-responsive admissions-img" src="http://msudenver.edu/media/content/admissions/images/Preview%20Day%20Web%202%20(4).png" alt="" style="   " />
                             </a>
                           </div>
 
-                            <div class="col-lg-4 action-btns-container">
+                            <div class="col-xs-12 col-sm-4 action-btns-container">
                                     <div class="rowdyred action-one clickable action-btns" data-href="apply">
                                         <span>START YOUR APPLICATION</span>
                                     </div>
@@ -393,21 +393,21 @@ $(window).scroll(function(){
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-lg-2">
+                            <div class="col-sm-2">
                                   <div class="tool tool-one clickable" data-href="https://www.msudenver.edu/programs/">
-                                            Degree Finder
+                                            Degree <span class="nobreak">Finder </span>
                                     </div>
-                                    <div class="tool clickable" data-href="https://www.msudenver.edu/admissions/cost">
+                                    <div class="tool clickable nobreak" data-href="https://www.msudenver.edu/admissions/cost">
                                             Cost
                                     </div>
                                     <div class="tool clickable" data-href="https://www.msudenver.edu/campuslife">
-                                            Campus Life
+                                            Campus <span class="nobreak">Life </span>
                                     </div>
-                                    <div class="tool clickable tool-last" data-href="parents">
+                                    <div class="tool clickable tool-last nobreak" data-href="parents">
                                             Parents
                                     </div>
                             </div>
-                              <div class="col-lg-3 info-section">
+                              <div class="col-sm-3 info-section">
                                   <div class="info-box clickable" data-href="requestinfo">
                                       <span class="infocenter">Request Info</span>
                                   </div>
@@ -418,7 +418,7 @@ $(window).scroll(function(){
                                       <span class="infocenter">Meet an Admissions Counselor</span>
                                   </div>
                               </div>
-                              <div class="col-lg-3 info-section" >
+                              <div class="col-sm-3 info-section" >
                                   <div class="info-box clickable" data-href="findus">
                                       <span class="infocenter">Find Us</span>
                                   </div>
@@ -429,7 +429,7 @@ $(window).scroll(function(){
                                       <span class="infocenter">Contact Admissions</span>
                                   </div>
                               </div>
-                            <div class="col-lg-4 panel">
+                            <div class="col-sm-4 panel">
                                     <h4 class="actionHeader events clickable admissions-deadlines" data-href="/events/academic">Dates / Deadlines</h4>
                                     <div id="homepage_events" class="">
                                         <script type="text/javascript" src="//www.trumba.com/scripts/spuds.js">
