--- a/www-root/index.html
+++ b/www-root/index.html
@@ -320,27 +320,35 @@ $(window).scroll(function(){
 </section> 
             <!-- ** Homepage Run Your Own Road - RYOR ** -->
  <section class="homepage-feature" id="homepage-ryor">
-    <div class="ryor-image visible-md visible-lg"> 
-        <svg xmlns="http://www.w3.org/2000/svg" stroke="white" xmlns:xlink="http://www.w3.org/1999/xlink">    
-           <use xlink:href="style-assets/media/defs/svg/sprite.defs.svg#runyourownroad" transform="scale(1.2)" /> 
-        </svg>
-    </div>
-    <div class="ryor-student">
-            <img class="ryor-student-image" src="style-assets/media/RYOR_solano.jpg" alt="Student image" />
-            <h1 class="feature-heading">Cristian Solano-Cordova</h1>
-            <h2 class="feature-heading-sub">MSU Denver ’17.</h2> 
-            <p class="feature-text">White House Advisor. Dreamer. Roadrunner.</p>
-             <p class="clearfix main-button visible-md visible-lg"><a href="javascript:void(0)" class="btn homepage-btn">Read his full story <i role="presentation" class="fa fa-angle-right fa-lg"></i></a> </p>
-    </div>   
-    <div class="ryor-image-mobile visible-xs visible-sm"> 
-        <svg xmlns="http://www.w3.org/2000/svg" stroke="white" xmlns:xlink="http://www.w3.org/1999/xlink">     
-           <use xlink:href="style-assets/media/defs/svg/sprite.defs.svg#runyourownroad" />
-        </svg>
-    </div>  
-     
-    <p class="clearfix main-button visible-xs visible-sm"><a href="javascript:void(0)" class="btn homepage-btn homepage-btn__small ">Read his full story <i role="presentation" class="fa fa-angle-right fa-lg"></i></a></p>
+   <div class="visible-md visible-lg">
+     <div class="ryor-student">
+           <h1 class="feature-heading">Cristian Solano-Cordova</h1>
+           <h2 class="feature-heading-sub">MSU Denver ’17.</h2>
+           <p class="feature-text">White House Advisor. Dreamer. Roadrunner.</p>
+            <p class="clearfix main-button visible-md visible-lg"><a href="javascript:void(0)" class="btn homepage-btn">Read his full story <i role="presentation" class="fa fa-angle-right fa-lg"></i></a> </p>
+      </div>
+   </div>
+   <div class="ryor-student-picbox">
+     <div class="ryor-image-mobile visible-xs visible-sm visible-md visible-lg">
+         <svg xmlns="http://www.w3.org/2000/svg" stroke="white" xmlns:xlink="http://www.w3.org/1999/xlink" style="position:relative">
+            <use xlink:href="style-assets/media/defs/svg/sprite.defs.svg#runyourownroad" />
+         </svg>
+     </div>
+       <img class="ryor-student-image" src="style-assets/media/RYOR_lefebre.jpg" alt="Student image" />
+   </div>
+   <div class="visible-xs visible-sm">
+     <div class="ryor-student">
+           <h1 class="feature-heading">Cristian Solano-Cordova</h1>
+           <h2 class="feature-heading-sub">MSU Denver ’17.</h2>
+           <p class="feature-text">White House Advisor. Dreamer. Roadrunner.</p>
+            <p class="clearfix main-button visible-md visible-lg"><a href="javascript:void(0)" class="btn homepage-btn">Read his full story <i role="presentation" class="fa fa-angle-right fa-lg"></i></a> </p>
+      </div>
+   </div>
+
+   <p class="clearfix main-button visible-xs visible-sm"><a href="javascript:void(0)" class="btn homepage-btn homepage-btn__small ">Read his full story <i role="presentation" class="fa fa-angle-right fa-lg"></i></a></p>
 </section>
-<!-- ** // Homepage Run Your Own Road - RYOR ** --> 
+<!-- ** // Homepage Run Your Own Road - RYOR ** -->
+
                 <!-- ** Homepage news ** -->
 <section class="homepage-feature" id="homepage-news">
     <div class="home-news-features">
