allow mobile secondary side menu to scroll

--- a/development/terminalfour/src/html/2column.html
+++ b/development/terminalfour/src/html/2column.html
@@ -256,6 +256,15 @@ lhnWin=window.open('http://chat.msudenver.edu/lhn/livechatvisitor.aspx?lhnid=294
     <script>
     w3IncludeHTML();
     </script>
+
+    <!-- allow mobile secondary side menu to scroll -->
+<style>
+#menu {
+  overflow-x: scroll; /* 1 */
+  -webkit-overflow-scrolling: touch; /* 2 */
+}
+</style>
+
 </body>
 
 </html>
