fix gap b/t"parents" box and section above; create space b/t action bans

--- a/development/terminalfour/src/html/admissions-new.html
+++ b/development/terminalfour/src/html/admissions-new.html
@@ -412,6 +412,20 @@ $(window).scroll(function(){
     padding: 0 !important;
 }
 
+@media screen and (min-width: 768px) {
+  .action-btns-container {
+    height: 11em;
+  }
+  .action-btns {
+      margin: 7px;
+      width: 32.1%;
+      height: 100%;
+  }
+  .panel {
+     max-height:0px;
+  }
+}
+
 </style>
 
 <div class="row">
