make info-box buttons tabbable (accessible) by removing data-href (etc.)

--- a/development/terminalfour/src/html/admissions.html
+++ b/development/terminalfour/src/html/admissions.html
@@ -381,56 +381,56 @@ $(window).scroll(function(){
                           </div>
 
                             <div class="col-xs-12 col-sm-4 action-btns-container">
-                                    <div class="rowdyred action-one clickable action-btns" data-href="apply">
+                                    <a class="rowdyred action-one action-btns" href="apply">
                                         <span>START YOUR APPLICATION</span>
-                                    </div>
-                                <div class="rowdyblue action-two clickable action-btns" data-href="https://admission.msudenver.edu/Datatel.ERecruiting.Web.External/Pages/welcome.aspx">
+                                    </a>
+                                <div class="rowdyblue action-two action-btns" href="https://admission.msudenver.edu/Datatel.ERecruiting.Web.External/Pages/welcome.aspx">
                                     <span>CHECK STATUS / FINISH APPLICATION</span>
                                 </div>
-                                <div class="give-visit-buttons action-three clickable action-btns" data-href="after">
+                                <a class="give-visit-buttons action-three action-btns" href="after">
                                     <span>AFTER YOU'VE BEEN ADMITTED</span>
-                                </div>
+                                </a>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-sm-2">
-                                  <div class="tool tool-one clickable" data-href="https://www.msudenver.edu/programs/">
+                                  <a class="tool tool-one" href="https://www.msudenver.edu/programs/">
                                             Degree <span class="nobreak">Finder </span>
-                                    </div>
-                                    <div class="tool clickable nobreak" data-href="https://www.msudenver.edu/admissions/cost">
+                                    </a>
+                                    <a class="tool nobreak" href="https://www.msudenver.edu/admissions/cost">
                                             Cost
-                                    </div>
-                                    <div class="tool clickable" data-href="https://www.msudenver.edu/campuslife">
+                                    </a>
+                                    <a class="tool" href="https://www.msudenver.edu/campuslife">
                                             Campus <span class="nobreak">Life </span>
-                                    </div>
-                                    <div class="tool clickable tool-last nobreak" data-href="parents">
+                                    </a>
+                                    <a class="tool tool-last nobreak" href="parents">
                                             Parents
-                                    </div>
+                                    </a>a
                             </div>
                               <div class="col-sm-3 info-section">
-                                  <div class="info-box clickable" data-href="requestinfo">
+                                  <a class="info-box" href="requestinfo">
                                       <span class="infocenter">Request Info</span>
-                                  </div>
-                                  <div class="info-box clickable" data-href="takeatour">
+                                  </a>
+                                  <a class="info-box" href="takeatour">
                                       <span class="infocenter">Take a Tour</span>
-                                  </div>
-                                  <div class="info-box clickable tool-last" data-href="counselor">
+                                  </a>
+                                  <a class="info-box tool-last" href="counselor">
                                       <span class="infocenter">Meet an Admissions Counselor</span>
-                                  </div>
+                                  </a>
                               </div>
                               <div class="col-sm-3 info-section" >
-                                  <div class="info-box clickable" data-href="findus">
+                                  <a class="info-box" href="findus">
                                       <span class="infocenter">Find Us</span>
-                                  </div>
-                                  <div class="info-box clickable" data-href="/openhouse">
+                                  </a>
+                                  <a class="info-box" href="/openhouse">
                                       <span class="infocenter">Attend Open House</span>
-                                  </div>
-                                  <div class="info-box clickable" data-href="contact">
+                                  </a>
+                                  <a class="info-box" href="contact">
                                       <span class="infocenter">Contact Admissions</span>
-                                  </div>
+                                  </a>
                               </div>
                             <div class="col-sm-4 panel">
-                                    <h4 class="actionHeader events clickable admissions-deadlines" data-href="/events/academic">Dates / Deadlines</h4>
+                                    <h4 class="actionHeader events admissions-deadlines" href="/events/academic">Dates / Deadlines</h4>
                                     <div id="homepage_events" class="">
                                         <script type="text/javascript" src="//www.trumba.com/scripts/spuds.js">
                                         </script>
